# kaggleBank

./: .dockerignore  .gitignore  Dockerfile  EDA.ipynb  EDA_LOCAL_32266.ipynb  README.md  app.py  app_LOCAL_32914.py  main.py  preprocessing.py  pyproject.toml  requirements.txt  test_json_1.json  test_json_2.json  util.py
ms/: __init__.py  functions.py  routes.py  services.py
ms/templates/: index.html  json_help.html
