[project]
name = "kagglebank"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.10"
dependencies = [
    "datetime>=5.5",
    "flask>=3.1.2",
    "gunicorn>=23.0.0",
    "ipykernel>=6.30.1",
    "joblib>=1.5.2",
    "matplotlib>=3.10.6",
    "nbdime>=4.0.2",
    "numpy>=2.2.6",
    "pandas>=2.3.2",
    "scikit-learn>=1.7.2",
    "seaborn>=0.13.2",
]
